# stm32_cubemx_atlas_robot

./: .clang-tidy  .gitmodules  CMakeLists.txt  components.txt
components/: CMakeLists.txt
components/atlas_hmi/: CMakeLists.txt  atlas_hmi.c  atlas_hmi.h  nvic.c
components/atlas_hmi/atlas_common/: CMakeLists.txt  atlas_common.h  atlas_event.h  atlas_manager.c  atlas_manager.h  atlas_notify.h
components/atlas_hmi/button_task/: button_manager.h
components/atlas_hmi/common/: CMakeLists.txt  button.c  button.h  button_data.h  common.h  event.h  manager.c  manager.h  notify.h  sd_path.h
components/atlas_hmi/kinematics_task/: CMakeLists.txt  kinematics_manager.c  kinematics_manager.h  kinematics_task.c  kinematics_task.h
components/atlas_hmi/packet_task/: CMakeLists.txt  packet_manager.c  packet_manager.h  packet_task.c  packet_task.h
components/atlas_hmi/sd_task/: CMakeLists.txt  sd_manager.c  sd_manager.h  sd_task.c  sd_task.h
components/atlas_hmi/system_task/: CMakeLists.txt  system_manager.c  system_manager.h  system_task.c  system_task.h
components/atlas_hmi/ui_task/: CMakeLists.txt  ui_manager.c  ui_manager.h  ui_screen.c  ui_screen.h  ui_task.c  ui_task.h
components/atlas_hmi/ui_task/button_task/: CMakeLists.txt  button_manager.c  button_manager.h  button_task.c  button_task.h
components/atlas_hmi/ui_task/display_task/: CMakeLists.txt  display_manager.c  display_manager.h  display_task.c  display_task.h
components/atlas_robot/: CMakeLists.txt  atlas_robot.c  atlas_robot.h
components/atlas_robot/common/: CMakeLists.txt  button.c  button.h  common.h  event.h  manager.c  manager.h  notify.h  sd.h
components/atlas_robot/hmi_task/: CMakeLists.txt  hmi_manager.c  hmi_manager.h  hmi_screen.c  hmi_screen.h  hmi_task.c  hmi_task.h
components/atlas_robot/hmi_task/button_task/: CMakeLists.txt  button_manager.c  button_manager.h  button_task.c  button_task.h
components/atlas_robot/hmi_task/display_task/: display_manager.c  display_manager.h  display_task.c  display_task.h
components/atlas_robot/hmi_task/hmi_utility/: CMakeLists.txt  hmi_state.c  hmi_state.h
components/atlas_robot/kinematics_task/: kinematics_manager.c  kinematics_manager.h  kinematics_task.c  kinematics_task.h
components/atlas_robot/packet_task/: packet_manager.c  packet_manager.h  packet_task.c  packet_task.h
components/atlas_robot/system_task/: system_manager.c  system_manager.h  system_task.c  system_task.h
components/atlas_robot/uart_task/: CMakeLists.txt  uart_task.c  uart_task.h
cubemx/: .mxproject  cubemx.ioc
cubemx/Core/Inc/: stm32l4xx_hal_conf.h  stm32l4xx_it.h
cubemx/Core/Src/: gpio.c  main.c  rtc.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c  tim.c
cubemx/cmake/stm32cubemx/: CMakeLists.txt
main/: CMakeLists.txt  main.c  nvic.c  syscalls.c
requirements/: components.txt
scripts/: add_components.sh  remove_components.sh  submodule.sh  update_components.sh
