add_library(hmi_utility STATIC)

target_sources(hmi_utility PRIVATE 
    hmi_state.c
)

target_include_directories(hmi_utility PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(hmi_utility PUBLIC 
    display_task
    common
    button_task
)

target_compile_options(hmi_utility PUBLIC
    -std=c23
    -Wall
    -Wextra
    -Wconversion
    -Wshadow
    -Wpedantic
    -Wnarrowing
    -Waddress
    -pedantic
    -Wdeprecated
    -Wsign-conversion
    -Wduplicated-cond
    -Wduplicated-branches
    -Wlogical-op
    -Wnull-dereference
    -Wdouble-promotion
    -Wimplicit-fallthrough
    -Wcast-align
    -Wformat=2
    -Wformat-security
    -Wmissing-prototypes
    -Wmissing-declarations
    -Wstrict-prototypes
    -Wold-style-definition
    -Wundef
    -Wvla
    -Wpointer-arith
    -Wstrict-aliasing=2
)
